--- a/src/View/User/_form.html.twig
+++ b/src/View/User/_form.html.twig
@@ -1,9 +1,29 @@
 {# TODO : manage errors display #}
 
-<form method="post">
+<form class="uk-form-horizontal uk-margin-large" method="post">
 	<input type="hidden" value="{{ user.id }}" name="id">
-	<input type="text" placeholder="name" name="name" value="{{user.name}}">
-	<textarea type="text" placeholder="adress" name="adress">{{user.adress}}</textarea>
-	<input type="text" placeholder="pass" name="pass" value="{{user.pass}}">
-	<input type="submit" value="Valider">
+    <div class="uk-margin">
+        <label class="uk-form-label" for="form-horizontal-text">Nom d'utilisateur : </label>
+        <div class="uk-form-controls">
+            <input class="uk-input" id="form-horizontal-text" type="text" placeholder="name" name="name" value="{{user.name}}">
+        </div>
+    </div>
+
+	<div class="uk-margin">
+        <label class="uk-form-label" for="form-horizontal-textarea">Adresse mail :</label>
+        <div class="uk-form-controls">
+            <input class="uk-input" id="form-horizontal-text" type="text" placeholder="adress" name="adress" value="{{user.adress}}">
+    	</div>
+    </div>
+
+	<div class="uk-margin">
+        <label class="uk-form-label" for="form-horizontal-text">Mot de Passe :</label>
+        <div class="uk-form-controls">
+            <input class="uk-input" id="form-horizontal-text" type="text" placeholder="pass" name="pass" value="{{user.pass}}">
+        </div>
+    </div>
+
+<input class="uk-button uk-button-default uk-align-center" type="submit" value="Valider">
 </form>
+
+
