--- a/src/View/User/edit.html.twig
+++ b/src/View/User/edit.html.twig
@@ -1,7 +1,13 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Edit User {{ user.name }}</h1>
-    {% include 'User/_form.html.twig' %}
-    <a href="/User/show/{{ user.id }}">Back</a>
+
+
+        <div class="uk-container uk-container-small">
+        <class="uk-grid-small " uk-grid action="" method="post">
+        <h1 class="uk-text-center">Editer vos informations personnelles, {{ user.name }} !</h1>
+        {% include 'User/_form.html.twig' %}
+        </div>
+
+
 {% endblock %}
