--- a/src/View/User/show.html.twig
+++ b/src/View/User/show.html.twig
@@ -1,11 +1,39 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>User {{ user.name }}</h1>
-    <p><li>{{ user.id }}</li> <li>Nom de l'user : {{ user.name }}</li> <li>adress : {{ user.adress }}</li> <li>Pass : {{ user.pass }}</li></p>
-    <a href="/User/edit/{{ user.id }}">Edit</a>
-    <form action="/User/delete/{{user.id}}" method="POST">
-        <button>Delete</button>
-    </form>
-    <a href="/User/index">Back</a>
+
+        <div class="uk-container uk-container-small">
+        <class="uk-grid-small " uk-grid action="" method="post">
+        <h1 class="uk-text-center">Bienvenue sur votre espace personnel, {{ user.name }} !</h1>
+
+<ul class="uk-comment-list">
+    <li>
+        <article class="uk-comment uk-visible-toggle" tabindex="-1">
+            <header class="uk-comment-header uk-position-relative">
+                <div class="uk-grid-medium uk-flex-middle" uk-grid>
+                    <div class="uk-width-auto">
+                        
+                    </div>
+                    <div class="uk-width-expand">
+                        <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">Nom : {{ user.name }}</a></h4>
+                        <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">Adresse  : {{ user.adress }}</a></h4>
+                    </div>
+                </div>
+            </header>
+
+            <p uk-margin>
+            <a class="uk-button uk-button-default" href="/User/edit/{{ user.id }}">Editer le compte</a>
+            <a class="uk-button uk-button-default" href="/User/logout/">Déconnexion</a>
+            <a class="uk-button uk-button-danger">Supprimer le compte</a>
+            </p>
+
+            <div class="uk-comment-body">
+                <p>Attention : la supression du compte entraine une suppresion de toutes les données liées à la session.</p>
+            </div>
+        </article>
+       </li>
+       </ul>
+       </div>
+
+       
 {% endblock %}
